kubernetes/model-catalog-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-catalog-service
  template:
    metadata:
      labels:
        app: model-catalog-service
    spec:
      containers:
        - name: model-catalog-service
          image: model-catalog-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: model-catalog-service
spec:
  selector:
    app: model-catalog-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
